Styles and HTML

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,29 @@
-/* Copyright 2007 Google */
+/*RESET*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, small, fieldset, form, label, legend { margin: 0; padding: 0; border: 0; outline: 0; font-size: 100%; vertical-align: baseline; background: transparent; }
+body { line-height: 1; }
+ol, ul { list-style: none; }
+blockquote, q { quotes: none; }
+blockquote:before, blockquote:after,q:before, q:after { content: ''; content: none; }
+:focus { outline: 0; }
+ins { text-decoration: none; }
+del { text-decoration: line-through; }
+table { border-collapse: collapse; border-spacing: 0; }
 
+/*LAYOUT*/
+body.home-page {}
+div.container {}
+#content {}
+
+/*HEADER*/
+#header {}
+
+/*MAIN*/
+#mainbar {}
+
+/*SIDEBAR*/
+#sidebar {}
+
+/*GOOGLE*/
 body {
   background-color: white;
   color: black;
