--- a/templates/base.html
+++ b/templates/base.html
@@ -42,25 +42,40 @@
       }());
     </script>
 
-
-    
-    
-      <div id="header">
-        <div >
+    <div id="header">
+    <div >
     {% if current_user %}
-      <p><a href="{{ current_user.profile_url }}"><img src="http://graph.facebook.com/{{ current_user.id }}/picture?type=square"/></a></p>
+      <p><a href="{{ current_user.profile_url }}"><img src="http://graph.facebook.com/{{ current_user.fb_id }}/picture?type=square"/></a></p>
       <p>Hello, {{ current_user.name|escape }}</p>
-      Total Votes: {{ user.total_votes }}
+      Total Votes: {{ user.userBeans }}
     {% endif %}
     <!-- City: {{city}} -->
-        </div>
+    </div>
 
-      </div>
+    </div>
     {% endblock %}
     
     
     <div id="body">
-        
+        <br/>
+        <div id="form_fill">
+        <form action="/sign" method="post">
+        <div><textarea name="content" rows="3" cols="50"></textarea>
+        </div>
+        <div id="tag_checks">
+            <ul>
+            {% for category in categories %}
+            <li>
+            <input name="cat_checks" type="checkbox" value="{{ category.key }}" />{{ category.name }}<br />
+            </li>
+            {%endfor %}
+            </ul>
+          </div>
+          <div><input type="submit" value="Share"></div>
+        </form>
+        </div>
+        </div>
+    <br/><br/>
         {% block body %}{% endblock %}</div>
     {% block footer %}{% endblock %}
   </body>
