--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,36 +10,45 @@ del { text-decoration: line-through; }
 table { border-collapse: collapse; border-spacing: 0; }
 
 /*TEXT STYLES*/
-body { font-family: Georgia,"Times New Roman",Times,serif; font-size: 100%; text-align: center; line-height: 1; color: black; }
+body { font-family: Georgia,"Times New Roman",Times,serif; line-height: 1.4em; }
 a { color: #81290D; cursor: pointer; outline: medium none; text-decoration: none; }
 
 /*LAYOUT*/
-body { background-color: #eee9dc; margin: 10px; }
-div.container { text-align: left; width: 100%;  }
+body { background-color: #eee9dc; }
+#container { width: 728px; height: 100%; }
 
 /*HEADER*/
-#header { margin: 0 auto; width: 100%; float: left; }
+#header { width: 100%; }
 #logo { background-image: url("../images/logo.png"); width: 280px; height: 76px; }
-#content-tp { background: url("../images/content-top.png") no-repeat scroll center top transparent; width: 720px; height: 40px; }
+#content-top { background: url("../images/content-top.png") no-repeat scroll center top transparent; width: 720px; height: 40px; }
 
 /*MAIN*/
-#content { margin: 0 auto; width: 100%; float: left; }
-#content-mid { background: url("../images/content-mid.png") repeat-y scroll center top transparent; min-height: 400px; width: 720px; }
-div#user-profile { height: 50px; }
-#user-profile .profile-image { float: left; }
-#user-profile .profile-name { margin-left: 60px; }
-#user-profile h2 { color: #81290D; font-size: 20px; font-weight: normal; text-transform: uppercase;}
+#content { }
+#content-middle { background: url("../images/content-mid.png") repeat-y scroll center top transparent; position: relative; width: 720px; float: left; }
+#bar-wrapper { margin-left: 24px; width: 100%; }
 
-#mainbar { margin-left: 28px; width: 400px; float: left; }
-#brag-form { }
-div.brag-list { margin-bottom: 30px; overflow: auto; clear:both; }
-div.brag-list .brag-entry { float: left; overflow: hidden; padding: 10px 0; width: 394px; background: url("../images/entry-separator.png") no-repeat scroll left bottom transparent; }
-div.brag-entry .brag-message { padding-bottom: 6px; }
-div.brag-entry .brag-message p { color: #737373; font-size: 16px; padding-top: 8px; }
-div.brag-entry .brag-meta p { font-size: 12px; color: #737373; }
-div.brag-entry .brag-stats { }
-div.brag-entry .brag-comments { }
+/*MAINBAR*/
+#mainbar {width: 386px; float: left; padding-right: 28px; }
+
+.user-profile { height: 60px; }
+.user-profile .profile-image { float: left; }
+.user-profile .profile-image img { border: solid #dadfd4 2px;  }
+.user-profile .profile-name { margin-left: 64px; }
+.user-profile h2 { color: #81290D; font-size: 20px; font-weight: normal; text-transform: uppercase;}
+
+#brag-form { clear: both; }
+#brag-list { margin: 20px 0; clear:both; overflow: hidden; }
+#brag-list .brag-entry { float: left; overflow: hidden; padding: 10px 0; width: 100%; background: url("../images/entry-separator.png") no-repeat scroll left top transparent; color: #636363; }
+#brag-list .brag-vote { font-size: 20px; -moz-border-radius: 20px; border: solid 0px #688b54; background-color: #688b54; float: right; overflow: hidden; color: white; margin-top: 4px; padding: 4px 8px 8px 8px; }
+.brag-entry .brag-message { padding-bottom: 6px; }
+.brag-entry .brag-message p { font-size: 16px; padding-top: 8px; }
+.brag-entry .brag-meta p { text-align: left; font-size: 12px; }
+.brag-entry .brag-stats { }
+.brag-entry .brag-comments { }
 
 /*SIDEBAR*/
-#sidebar { width: 300px; float: right; }
+#sidebar { width: 260px; float: left; }
 
+/*FOOTER*/
+#footer { }
+#content-bottom { background: url("../images/content-bottom.png") no-repeat scroll center top transparent; width: 720px; height: 28px; float: left; }
