--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -32,11 +32,16 @@ body { background-color: #eee9dc; }
 
 .user-profile { height: 60px; }
 .user-profile .profile-image { float: left; }
-.user-profile .profile-image img { border: solid #dadfd4 2px;  }
+.user-profile .profile-image img { border: solid #c3c7bd 2px;  }
 .user-profile .profile-name { margin-left: 64px; }
 .user-profile h2 { color: #81290D; font-size: 20px; font-weight: normal; text-transform: uppercase;}
 
-#brag-form { clear: both; }
+#brag-form { margin: 6px 0; clear: both; }
+#brag-form h3 { color: #81290D; font-size: 16px; font-weight: normal; padding-bottom: 4px; }
+#text-box .text-area { border: 1px solid #c3c7bd; }
+#tag-list { }
+
+
 #brag-list { margin: 20px 0; clear:both; overflow: hidden; }
 #brag-list .brag-entry { float: left; overflow: hidden; padding: 10px 0; width: 100%; background: url("../images/entry-separator.png") no-repeat scroll left top transparent; color: #636363; }
 #brag-list .brag-vote { font-size: 20px; -moz-border-radius: 20px; border: solid 0px #688b54; background-color: #688b54; float: right; overflow: hidden; color: white; margin-top: 4px; padding: 4px 8px 8px 8px; }
