--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -46,7 +46,12 @@ input.button { border: 1px solid #81290D; color: #81290D; font-weight: bold; }
 
 #brag-list { margin: 20px 0; clear:both; overflow: hidden; }
 #brag-list .brag-entry { float: left; overflow: hidden; padding: 10px 0; width: 100%; background: url("../images/entry-separator.png") no-repeat scroll left top transparent; color: #636363; }
-#brag-list .brag-vote { font-size: 20px; -moz-border-radius: 20px; border: solid 0px #688b54; background-color: #688b54; float: right; overflow: hidden; color: white; margin-top: 4px; padding: 4px 8px 8px 8px; }
+#brag-list .brag-vote { text-align: center; float: right; }
+#brag-list .brag-vote a { font-size: 12px; }
+.vote-count { font-size: 20px; -moz-border-radius: 20px; border: solid 0px #688b54; background-color: #688b54; color: white; margin-top: 4px; padding: 4px 8px 8px 8px; }
+
+
+
 .brag-entry .brag-message { padding-bottom: 6px; }
 .brag-entry .brag-message p { font-size: 16px; padding-top: 8px; }
 .brag-entry .brag-meta p { text-align: left; font-size: 12px; }
