Added styles for Sidebar.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,6 +12,11 @@ table { border-collapse: collapse; border-spacing: 0; }
 /*TEXT STYLES*/
 body { font-family: Georgia,"Times New Roman",Times,serif; line-height: 1.4em; }
 a { color: #81290D; cursor: pointer; outline: medium none; text-decoration: none; }
+#brag-form h3, #sidebar h3 {  font-family: Arial; color: #81290D; font-size: 16px; font-weight: normal; padding-bottom: 4px; }
+#mainbar .user-profile h2 { color: #81290D; font-size: 20px; font-weight: normal; text-transform: uppercase; }
+#brag-list .brag-vote a { font-size: 12px; }
+#brag-list .brag-entry p, #sidebar p { font-size: 16px; padding-top: 8px; color: #636363; }
+#brag-list .brag-entry .brag-meta p, #sidebar p { text-align: left; font-size: 14px; }
 
 /*LAYOUT*/
 body { background-color: #eee9dc; }
@@ -34,10 +39,9 @@ body { background-color: #eee9dc; }
 .user-profile .profile-image { float: left; }
 .user-profile .profile-image img { border: solid #c3c7bd 2px;  }
 .user-profile .profile-name { margin-left: 64px; }
-.user-profile h2 { color: #81290D; font-size: 20px; font-weight: normal; text-transform: uppercase;}
 
 #brag-form { margin: 6px 0 18px 0; float: left; clear: both; }
-#brag-form h3 { color: #81290D; font-size: 16px; font-weight: normal; padding-bottom: 4px; }
+
 #text-box .text-area { border: 1px solid #c3c7bd; }
 #tag-list { }
 #tag-list ul, #tag-list li { display: inline; color: #636363; font-size: 12px; }
@@ -45,21 +49,19 @@ body { background-color: #eee9dc; }
 input.button { border: 1px solid #81290D; color: #81290D; font-weight: bold; }
 
 #brag-list { margin: 20px 0; clear:both; overflow: hidden; }
-#brag-list .brag-entry { float: left; overflow: hidden; padding: 10px 0; width: 100%; background: url("../images/entry-separator.png") no-repeat scroll left top transparent; color: #636363; }
+#brag-list .brag-entry { float: left; overflow: hidden; padding: 10px 0; width: 100%; background: url("../images/entry-separator.png") no-repeat scroll left top transparent; }
 #brag-list .brag-vote { text-align: center; float: right; }
-#brag-list .brag-vote a { font-size: 12px; }
+
 .vote-count { font-size: 20px; -moz-border-radius: 20px; border: solid 0px #688b54; background-color: #688b54; color: white; margin-top: 4px; padding: 4px 8px 8px 8px; }
-
-
-
-.brag-entry .brag-message { padding-bottom: 6px; }
-.brag-entry .brag-message p { font-size: 16px; padding-top: 8px; }
-.brag-entry .brag-meta p { text-align: left; font-size: 12px; }
+.brag-entry .brag-message { }
 .brag-entry .brag-stats { }
 .brag-entry .brag-comments { }
 
 /*SIDEBAR*/
 #sidebar { width: 260px; float: left; }
+#start ul { list-style-image: url("../images/green-bullet.png"); margin-left: 20px;  }
+#start-button {text-align: center; border: 2px solid #81290D; color: #81290D; width: 100px; }
+
 
 /*FOOTER*/
 #footer { }
