--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,147 @@
-{% extends "base.html" %}
-
-{% block head %}
-{% endblock %}
-
-{% block body %}
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+		<title>Green Bean Me</title>
+		<link rel="stylesheet" type="text/css" href="static/css/styles.css">
+                <script type="text/javascript">
+	  
+	      function voteForBean() {
+	    // Get the user id and the bean id
+	    var form = document.getElementById("tasklistform");
+	    var dialog = document.getElementById("tasklistform_dialog");
+	      DialogBox.instance().show(dialog, function() {
+              form["name"].focus();
+	      });
+		}
+		</script>
+		<script>
+	      window.fbAsyncInit = function() {
+		FB.init({appId: '{{ facebook_app_id }}', status: true, cookie: true, xfbml: true});
+		FB.Event.subscribe('{% if current_user %}auth.logout{% else %}auth.login{% endif %}', function(response) {
+		  window.location.reload();
+		});
+	      };
+	      (function() {
+		var e = document.createElement('script');
+		e.type = 'text/javascript';
+		e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
+		e.async = true;
+		document.getElementById('fb-root').appendChild(e);
+	      }());
+		
+      </script>
+		
+		  
+	    
+	</head>
+	<body>
  
-    <div class="floatcontainerdiv">
-      {% for brag in newBrags %}
-    	<div id="form_fill">
-	<b>{{ brag.brag.user.name }}</b> wrote: {{ brag.brag.message|escape }}
-	<hr/>
-	<p>User: <a href="user?user={{ brag.brag.user.fb_id }}"><img src="http://graph.facebook.com/{{ brag.brag.user.fb_id }}/picture?type=square"/></a></p>
-	Votes: {{brag.bCount}}
-	<br/><br/>
-        Vote: <a href='/vote?id={{brag.brag.key}}' class="vote"><b>+</b></a>
-	<br/>
-	Tags: <b>{{brag.cats}}</b>
-    </div>
-       </div>
+      <script>
+      window.fbAsyncInit = function() {
+        FB.init({appId: '{{ facebook_app_id }}', status: true, cookie: true, xfbml: true});
+        FB.Event.subscribe('{% if current_user %}auth.logout{% else %}auth.login{% endif %}', function(response) {
+          window.location.reload();
+        });
+      };
+      (function() {
+        var e = document.createElement('script');
+        e.type = 'text/javascript';
+        e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
+        e.async = true;
+        document.getElementById('fb-root').appendChild(e);
+      }());
+    </script>
 
-    {% endfor %}
-{% endblock %}
+
+		<div id="container">
+			
+            <!-- HEADER --> 
+			<div id="header">
+			    <div id="logo"></div>
+			    <div id="content-top"></div>
+			    <div class="button">
+			    <fb:login-button autologoutlink="true" perms="read_stream,publish_stream"></fb:login-button>
+			    </div>
+			</div>
+            
+            <!-- MAIN CONTENT --> 
+			<div id="content">
+                <div id="content-middle">
+                    <div id="bar-wrapper">
+	
+	                    <!-- MAINBAR --> 
+	                    <div id="mainbar">
+						    <!-- user-profile: container for the user's avatar and name. -->
+						    <div class="user-profile">
+						    {% if current_user %}
+							    <div class="profile-image">
+								    <a href="{{ current_user.profile_url }}"><img src="http://graph.facebook.com/{{ current_user.fb_id }}/picture?type=square"/></a></p>								    
+								</div>
+							    <div class="profile-name">
+								    <h2>{{ current_user.name|escape }}</h2>
+								</div>
+						    {% endif %}							    
+							</div>
+							
+							<!-- brag-form: container for the Brag entry form -->
+							<div id="brag-form">
+							  <form action="/sign" method="post">
+			                                <h3>Doing something Green? Share it and earn rewards.</h3> 
+						        <div id="text-box"><textarea class="text-area" name="content" rows="3" cols="46"></textarea>
+						        </div>
+						        <div id="tag-list">
+						            <ul>
+							      {% for category in categories %}
+						                <li>
+								<input name="cat_checks" type="checkbox" value="{{ category.key }}" />{{ category.name }}<br />
+								</li>
+								{%endfor %}
+						            </ul>
+						        </div>
+						        <div id="submit-button"><input class="button" value="Share" type="submit"></div>
+							  </form>
+							</div>
+					
+						    <!-- brag-list: container for list of Brags. --> 
+						    <div id="brag-list">
+						      {% for brag in newBrags %}
+							    <!-- brag-entry: container for a single Brag -->
+						        <div class="brag-entry">
+								<div class="brag-vote">
+								    	<div class="vote-count">{{brag.bCount}}</div>
+									    <a href='/vote?id={{brag.brag.key}}'>vote+</a>
+								    </div>
+						            <div class="brag-message">
+							            <p>{{ brag.brag.message|escape }}</p>
+							        </div>       	
+						            <div class="brag-meta">
+							      <p>{{brag.brag.create_date|timesince}}- 
+							      {% for cat in brag.brag.category%}
+							      <a href="#">#{{cat}} </a>
+							      {%endfor%}
+							      </p>
+							        </div>       	
+								    <div class="brag-comments">...</div>   
+						        </div><!-- /brag-entry -->
+						      {% endfor %}
+						    </div><!-- /brag-list -->							
+		
+                        </div><!-- /mainbar -->
+
+                        <!-- SIDEBAR --> 
+                        <div id="sidebar">
+						</div>
+	                
+	                </div><!-- /bar-wrapper -->
+                </div><!-- /content-middle -->
+            </div><!-- /content -->
+            
+            <!-- FOOTER --> 
+            <div id="footer">
+			    <div id="content-bottom"></div>                  
+            </div>
+
+		</div><!-- /container -->
+	</body>
+</html>
