Added User beans counter.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,9 +14,11 @@ body { font-family: Georgia,"Times New Roman",Times,serif; line-height: 1.4em; }
 a { color: #81290D; cursor: pointer; outline: medium none; text-decoration: none; }
 #brag-form h3, #sidebar h3 { color: #81290D; font-size: 16px; font-weight: normal; padding-bottom: 4px; }
 #mainbar .user-profile h2 { color: #81290D; font-size: 20px; font-weight: normal; text-transform: uppercase; }
-#brag-list .brag-vote a { font-size: 12px; }
+#brag-list .brag-vote a, .user-beans p { font-size: 12px; }
 #brag-list .brag-entry p, #sidebar p, #sidebar ul { font-size: 16px; padding-top: 8px; color: #636363; }
 #brag-list .brag-entry .brag-meta p, #sidebar p { text-align: left; font-size: 14px; }
+.user-beans p { text-align: center; line-height: 1em; color: #636363; }
+
 
 /*LAYOUT*/
 body { background-color: #eee9dc; }
@@ -24,7 +26,7 @@ body { background-color: #eee9dc; }
 
 /*HEADER*/
 #header { width: 100%; }
-#logo { background-image: url("../images/logo.png"); width: 280px; height: 76px; }
+#logo { background-image: url("../images/logo.png"); width: 280px; height: 76px; margin-left: 224px; }
 #content-top { background: url("../images/content-top.png") no-repeat scroll center top transparent; width: 720px; height: 40px; }
 
 /*MAIN*/
@@ -37,8 +39,11 @@ body { background-color: #eee9dc; }
 
 .user-profile { height: 60px; }
 .user-profile .profile-image { float: left; }
-.user-profile .profile-image img { border: solid #c3c7bd 2px;  }
-.user-profile .profile-name { margin-left: 64px; }
+.user-profile .profile-image img { border: solid #c3c7bd 2px; }
+.user-profile .profile-name { margin-left: 8px; float: left; }
+.user-profile .user-beans { float: left; margin-left: 12px; }
+.user-profile .user-bean-count { float: left; font-size: 20px; -moz-border-radius: 20px; border: solid 0px #688b54; background-color: #688b54; color: white; margin: -4px 6px 0 10px; padding: 4px 8px 8px 8px;  }
+.user-profile .user-bean-text { float: right; }
 
 #brag-form { margin: 6px 0 18px 0; float: left; clear: both; }
 
