--- a/templates/index.html
+++ b/templates/index.html
@@ -4,34 +4,11 @@
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
         <title>Green Bean Me</title>
         <link rel="stylesheet" type="text/css" href="static/css/styles.css">
-        <script type="text/javascript">
-            function voteForBean() {
-                // Get the user id and the bean id
-                var form = document.getElementById("tasklistform");
-                var dialog = document.getElementById("tasklistform_dialog");
-                DialogBox.instance().show(dialog, function() {
-                    form["name"].focus();
-                });
-            }
-        </script>
-        <script>
-            window.fbAsyncInit = function() {
-                FB.init({appId: '{{ facebook_app_id }}', status: true, cookie: true, xfbml: true});
-                FB.Event.subscribe('{% if current_user %}auth.logout{% else %}auth.login{% endif %}', function(response) {
-                    window.location.reload();
-                });
-            };
-            (function() {
-                var e = document.createElement('script');
-                e.type = 'text/javascript';
-                e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
-                e.async = true;
-            	document.getElementById('fb-root').appendChild(e);
-        	}());
-        </script>
         
     </head>
     <body>
+<div id="fb-root"></div>
+ <script src="http://connect.facebook.net/en_US/all.js"></script>
        	<script>
        		window.fbAsyncInit = function() {
        			FB.init({appId: '{{ facebook_app_id }}', status: true, cookie: true, xfbml: true});
@@ -54,6 +31,7 @@
            	<div id="header">
                	<div id="logo"></div>
                	<div id="content-top"></div>
+		
                	<div class="button">
                		<fb:login-button autologoutlink="true" perms="read_stream,publish_stream"></fb:login-button>
                	</div>
@@ -79,11 +57,12 @@
                            	</div>
                            
                            	<!-- brag-form: container for the Brag entry form -->
+				{% if current_user %}
                            	<div id="brag-form">
                            		<form action="/sign" method="post">
                                   	<h3>Doing something Green? Share it and earn rewards.</h3> 
                                		<div id="text-box">
-										<textarea class="text-area" name="content" rows="3" cols="46"></textarea>
+					  <textarea class="text-area" name="content" rows="3" cols="46"></textarea>
                                		</div>
                                		<div id="tag-list">
                                    		<ul>
@@ -97,6 +76,7 @@
                                		<div id="submit-button"><input class="button" value="Share" type="submit"></div>
                            		</form>
                        		</div>
+				{%endif%}
                            	<!-- brag-list: container for list of Brags. --> 
                            	<div id="brag-list">
                            		{% for brag in newBrags %}
@@ -146,5 +126,6 @@
            	</div>
 
        	</div><!-- /container -->
+		
    	</body>
 </html>
