Handlers now return templates based on whether request is from Facebook iFrame or not.

--- a/templates/facebook/fb_base.html
+++ b/templates/facebook/fb_base.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <title>{% block title %}Greenbean - Test{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="static/css/facebook_styles.css">
     <script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
     </head>
   <body>
@@ -24,7 +24,7 @@
       <div id="content">
         <div id="content-middle">
         	<div id="bar-wrapper">
-						{% block main %}
+						{% block main %}	
 						{% endblock  %}
 						
 						{% block sidebar%}
