--- a/templates/facebook/fb_base_index.html
+++ b/templates/facebook/fb_base_index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "fb_base.html" %}
 
 	{% block title %}Greenbean - Go Green, Earn Beans{% endblock %}
 	
@@ -7,5 +7,5 @@
 	{% endblock %}
 	
 	{% block sidebar %}
-	This is NOT a Facebook template</h2>	
-	{% endblock %}	
+	This page is for Facebook.
+	{% endblock %}
