--- a/templates/base.html
+++ b/templates/base.html
@@ -5,19 +5,50 @@
     <title>{% block title %}Greenbean - Test{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
     <script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<script type="text/javascript">
+	  	$(function() {  
+	      $('.error').hide();  
+	      $("#share-button").click(function() { 
+		      var fb_id = $("input#fb_id").val();
+		      var dataString = 'fb_id='+ fb_id;  
+					//alert (dataString);return false;  
+					$.ajax({  
+						type: "POST",  
+					  url: "/post-brag",  
+					  data: dataString,  
+					  success: function() {  
+					  	$('#brag-form').html("<div id='message'></div>");  
+					    $('#message').html("<h2>Green status posted!</h2>");  
+					  }  
+					});  
+					return false;
+	    	});  
+	   	});
+		</script>
+
     </head>
   <body>
     <div id="container">
 
     	<!-- HEADER --> 
       <div id="header">
-        <div id="logo"></div>
+				<div id="top">
+					<div id="logo"></div>
+					<div id="fb-login">
+			    	{% if current_user %}
+			      <div id="fb-profile">
+							<a href="{{ current_user.fb_profile_url }}">
+								<img src="http://graph.facebook.com/{{ current_user.fb_id }}/picture?type=square"/>
+							</a>
+						</div>
+			    	{% endif %}
+						<div id="fb-button">
+							<fb:login-button autologoutlink="true" perms="publish_checkins,publish_stream"></fb:login-button>
+						</div>
+					</div>
+				</div>	
         <div id="content-top"></div>
-        <!--
-        <div class="button">
-          <fb:login-button autologoutlink="true" perms="read_stream,publish_stream"></fb:login-button>
-        </div>
-        -->
       </div>
 
       <!-- MAIN CONTENT --> 
@@ -44,7 +75,7 @@
 		<div id="fb-root"></div>
     <script>
       window.fbAsyncInit = function() {
-        FB.init({appId: '13641208923', status: true, cookie: true, 
+        FB.init({appId: '{{ facebook_app_id }}', status: true, cookie: true, 
                xfbml: true});
         FB.Event.subscribe('{% if current_user %}auth.logout{% else %}auth.login{% endif %}', function(response) {
           window.location.reload();
