--- a/templates/base_user_profile.html
+++ b/templates/base_user_profile.html
@@ -7,40 +7,42 @@
 	<div id="mainbar">
   	<!-- user-profile: container for the user's avatar and name. -->
   	<div class="user-profile">
-    {% if current_user %}      
     	<div class="profile-image">
-      	<a href="{{ current_user.profile_url }}"><img src="http://graph.facebook.com/{{ current_user.fb_id }}/picture?type=square"/></a></p>
+      	<a href="{{ profile_user.fb_profile_url }}"><img src="http://graph.facebook.com/{{ profile_user.fb_id }}/picture?type=square"/></a></p>
       </div>
       <div class="profile-name">
-      	<h2>{{ current_user.name|escape }} ({{current_user.userBeans}})</h2>
-				<p><a href="/auth/logout">Log out</a></p>
+      	<h2 id="user-name">
+					<span class="name">{{ profile_user.name|escape }}</span>
+					{% if current_user.userBeans %}
+					<span class="beans-count"> ({{profile_user.userBeans}})</span>
+					{% endif %}
+				</h2>
       </div>
-  	{% else %}
-  		<p>You are not yet logged into this site</p>
-  		<p><a href="/auth/login">Log in with Facebook</a></p>
-    {% endif %}                             
     </div><!-- /user-profile -->
   	<!-- brag-form: container for the Brag entry form -->
-		{% if current_user %}
+		{% ifequal current_user.fb_id profile_user.fb_id %}
     <div id="brag-form">
-    	<form action="/sign" method="post">
-      	<h3>Doing something Green? Share it and earn rewards.</h3> 
-        <div id="text-box">
+      <h3>Doing something Green? Share it and earn rewards.</h3> 
+   	  <form name="input" action=""> 
+      	<div id="text-box">
   				<textarea class="text-area" name="content" rows="3" cols="46"></textarea>
         </div>
         <div id="tag-list">
         	<ul>
           {% for category in categories %}
           	<li>
-            	<input name="cat_checks" type="checkbox" value="{{ category.key }}" />{{ category.name }}<br />
+            	<input name="cat_checks" type="checkbox" value="{{category.key}}" />{{ category.name }}<br />
             </li>
           {%endfor %}
           </ul>
         </div>
-        <div id="submit-button"><input class="button" value="Share" type="submit"></div>
+				<input type="hidden" name="fb_id" value"{{profile_user.bf_id}}"/>
+        <div id="submit-button">
+					<input type="submit" name="submit" class="button" id="share-button" value="Share" >
+				</div>
       </form>
     </div><!-- /brag-form -->
-		{%endif%}
+		{% endifequal %}
     <!-- brag-list: container for list of Brags. --> 
     <div id="brag-list">
     {% for brag in newBrags %}
@@ -75,10 +77,10 @@
   <div id="sidebar">
   	<div class="side-block">
     	<div id="start">
-      	<h3>Who's The Greenest Of Them All?</h3>
+      	<h3>Go Green, Earn Beans!</h3>
         <ul>
         	<li>Get ranked on your Green accomplishments.</li>
-          <li>Earn beans for you and your community and get rewards.</li>
+          <li>Earn beans for you and your community and win prizes.</li>
         </ul>
         <div id="start-button">
 					<a href="#"><img src="static/images/get-beans-button.png"/></a>
