--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -19,7 +19,8 @@ a { color: #81290D; cursor: pointer; outline: medium none; text-decoration: none
 #brag-list .brag-entry p, #sidebar p, #sidebar ul { font-size: 16px; padding-top: 8px; color: #636363; }
 #brag-list .brag-entry .brag-meta p, #sidebar p { text-align: left; font-size: 14px; }
 .user-beans p { text-align: center; line-height: 1em; color: #636363; }
-
+#footer { font-size: 12px; color: #636363; }
+.vote-button { color: #81290D;  }
 
 /*LAYOUT*/
 body { background-color: #eee9dc; }
@@ -58,11 +59,11 @@ body { background-color: #eee9dc; }
 #tag-list { }
 #tag-list ul, #tag-list li { display: inline; color: #636363; font-size: 12px; }
 #submit-button { float: right; }
-input.button { border: 1px solid #81290D; color: #81290D; font-weight: bold; }
 
 #brag-list { margin: 20px 0; clear:both; overflow: hidden; }
 #brag-list .brag-entry { float: left; overflow: hidden; padding: 10px 0; width: 100%; background: url("../images/entry-separator.png") no-repeat scroll left top transparent; }
 #brag-list .brag-vote { text-align: center; float: right; }
+.vote-button { background-color: transparent; text-decoration: underline; border: none; cursor: pointer; padding: 0; }
 
 .vote-count { font-size: 20px; -moz-border-radius: 20px; border: solid 0px #688b54; background-color: #688b54; color: white; margin-top: 4px; padding: 4px 8px 8px 8px; }
 .brag-entry .brag-message { }
@@ -76,5 +77,7 @@ input.button { border: 1px solid #81290D; color: #81290D; font-weight: bold; }
 
 
 /*FOOTER*/
-#footer { }
+#footer {  }
 #content-bottom { background: url("../images/content-bottom.png") no-repeat scroll center top transparent; width: 720px; height: 28px; float: left; }
+#footer-content { height: 28px; }
+#credit { float: right; margin: 0px 24px 10px 0; }
