--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,6 +12,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 /*TEXT STYLES*/
 body { font-family: Georgia,"Times New Roman",Times,serif; line-height: 1.4em; }
 a { color: #81290D; cursor: pointer; outline: medium none; text-decoration: none; }
+#fb-profile { font-size: 14px; text-align: right; }
 #brag-form h3, #sidebar h3 { color: #81290D; font-size: 16px; font-weight: normal; padding-bottom: 4px; }
 #tag-list label { white-space:nowrap; }
 #mainbar .user-profile h2 { color: #81290D; font-size: 20px; font-weight: normal; text-transform: uppercase; }
@@ -30,12 +31,11 @@ body { background-color: #eee9dc; }
 #header { width: 100%; }
 #top { height: 80px; }
 #logo { background-image: url("../images/logo.png"); width: 280px; height: 76px; margin-left: 20px; float: left; }
-#fb-login { margin: 4px 26px 4px 0px; width: 260px; float: right; }
+#fb-login { margin: 4px 26px 4px 0px; width: 400px; float: right; }
 #fb-button { float: right; }
-#fb-profile { float: left; padding-right: 12px; }
+#fb-profile { float: right; padding: 4px 16px 0 0; }
 #fb-profile img { border: 3px solid #222; }
 #content-top { background: url("../images/content-top.png") no-repeat scroll center top transparent; width: 720px; height: 40px; }
-
 
 /*MAIN*/
 #content { }
@@ -74,7 +74,6 @@ body { background-color: #eee9dc; }
 #sidebar { width: 260px; float: left; }
 #start ul { list-style-image: url("../images/green-bullet.png"); margin-left: 20px;  }
 #start-button { width: 88px; height: 32px; float: right; margin-top: 10px; }
-
 
 /*FOOTER*/
 #footer {  }
