--- a/templates/base.html
+++ b/templates/base.html
@@ -58,17 +58,15 @@
       <div id="header">
 				<div id="top">
 					<div id="logo"></div>
-					<div id="fb-login"><!--
-			    	{% if current_user %}
-			      <div id="fb-profile">
-							<a href="{{ current_user.fb_profile_url }}">
-								<img src="http://graph.facebook.com/{{ current_user.fb_id }}/picture?type=square"/>
-							</a>
-						</div>
-			    	{% endif %}-->
+					<div id="fb-login">
 						<div id="fb-button">
 							<fb:login-button autologoutlink="true" perms="publish_checkins,publish_stream"></fb:login-button>
 						</div>
+			    	{% if current_user %}
+			      <div id="fb-profile">
+							<p>Hello, <a href="/user/{{current_user.fb_id}}">{{current_user.name}}</a></p>
+						</div>
+			    	{% endif %}
 					</div>
 				</div>	
         <div id="content-top"></div>
@@ -92,7 +90,7 @@
       <div id="footer">
       	<div id="content-bottom"></div>   
         <div id="footer-content">
-        	<div id="credit">Powered by <a href="http://code.google.com/appengine/">Google App Engine</a></div>
+        	<div id="credit"><a href="http://code.google.com/appengine/"><img src="/static/images/appengine-silver-120x30.gif"/></a></div>
         </div>       
       </div>
     </div><!-- /container -->
